--- a/src/pages/Admin/adminDashboard.css
+++ b/src/pages/Admin/adminDashboard.css
@@ -8,27 +8,18 @@ body {
 }
 
 .dashboard-wrapper {
-  display: flex;
-  min-height: 100vh;
-  align-items: flex-start; 
+   display: flex;
+  align-items: stretch;
+   min-height: 100vh;
+  height: auto;
+  width: 100%;
 }
+
 
 .main-content {
   flex-grow: 1;
   min-height: 100vh;
   background-color: rgb(255, 246, 246);
-}
-
-.modal-overlay {
-  position: fixed;
-  inset: 0;
-  background: rgba(0,0,0,0.45);
-  backdrop-filter: blur(4px);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 2000;
-  padding: 20px;
 }
 
 .modal-content {
@@ -37,11 +28,6 @@ body {
   max-height: 80vh;
   overflow: hidden;
   border-radius: 12px;
-}
-.overlay-scroll {
-  max-height: 70vh;
-  overflow-y: auto;
-  padding-right: 6px;
 }
 
 .dashboard-card {
